PLAT-1034-3 Simplified EmfEntityInput and Related Classes (#403)