@@ -1,8 +1,8 @@
 package com.softicar.platform.ajax.input.auto.complete;
 
-import com.softicar.platform.common.core.i18n.IDisplayString;
+import com.softicar.platform.common.container.derived.CurrentDerivedObjectRegistry;
 import com.softicar.platform.common.core.thread.Locker;
-import com.softicar.platform.dom.elements.input.auto.AbstractDomAutoCompletePreferenceInputEngine;
+import com.softicar.platform.dom.elements.input.auto.DomAutoCompleteDefaultInputEngine;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -11,10 +11,8 @@ import java.util.Optional;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
-public class AjaxAutoCompleteTestInputEngine extends AbstractDomAutoCompletePreferenceInputEngine<AjaxAutoCompleteTestItem> {
+public class AjaxAutoCompleteTestInputEngine extends DomAutoCompleteDefaultInputEngine<AjaxAutoCompleteTestItem> {
 
 	private final Collection<AjaxAutoCompleteTestItem> items;
 	private final Lock lock;
@@ -26,12 +24,9 @@ public class AjaxAutoCompleteTestInputEngine extends AbstractDomAutoCompletePref
 		this.items.addAll(Arrays.asList(items));
 		this.lock = new ReentrantLock();
 		this.requestListener = Optional.empty();
-	}
 
-	@Override
-	public IDisplayString getDisplayString(AjaxAutoCompleteTestItem item) {
-
-		return IDisplayString.create(item.getName());
+		setLoader(() -> this.items);
+		addDependsOn(this.items);
 	}
 
 	@Override
@@ -43,61 +38,29 @@ public class AjaxAutoCompleteTestInputEngine extends AbstractDomAutoCompletePref
 		}
 	}
 
-	@Override
-	public Collection<AjaxAutoCompleteTestItem> findMatchingItems(String pattern, int fetchOffset, int fetchSize) {
-
-		return new ItemLoader(fetchOffset, fetchSize).load(item -> getNormalizedDisplayName(item).contains(pattern));
-	}
-
-	@Override
-	public Optional<AjaxAutoCompleteTestItem> findPerfectMatch(String pattern) {
-
-		List<AjaxAutoCompleteTestItem> items = new ItemLoader(0, 2).load(item -> getNormalizedDisplayName(item).equals(pattern));
-		if (items.size() == 1) {
-			return Optional.of(items.iterator().next());
-		} else {
-			return Optional.empty();
-		}
-	}
-
-	private String getNormalizedDisplayName(AjaxAutoCompleteTestItem item) {
-
-		return getDisplayString(item).toString().toLowerCase();
-	}
-
 	public AjaxAutoCompleteTestInputEngine clearItems() {
 
 		items.clear();
+		invalidateCache();
 		return this;
 	}
 
 	public AjaxAutoCompleteTestInputEngine addItem(AjaxAutoCompleteTestItem item) {
 
 		items.add(item);
+		invalidateCache();
 		return this;
 	}
 
 	public AjaxAutoCompleteTestInputEngine addItems(AjaxAutoCompleteTestItem...items) {
 
-		return addItems(Arrays.asList(items));
-	}
-
-	public AjaxAutoCompleteTestInputEngine addItems(Collection<AjaxAutoCompleteTestItem> items) {
-
-		items.forEach(this::addItem);
+		List.of(items).forEach(this::addItem);
 		return this;
 	}
 
 	public AjaxAutoCompleteTestInputEngine addStringItem(String name) {
 
-		items.add(new AjaxAutoCompleteTestItem(name));
-		return this;
-	}
-
-	public AjaxAutoCompleteTestInputEngine addStringItems(Collection<String> items) {
-
-		items.forEach(this::addStringItem);
-		return this;
+		return addItem(new AjaxAutoCompleteTestItem(name));
 	}
 
 	public AjaxAutoCompleteTestInputEngine setRequestListener(Consumer<String> requestListener) {
@@ -111,25 +74,8 @@ public class AjaxAutoCompleteTestInputEngine extends AbstractDomAutoCompletePref
 		return new Locker(lock);
 	}
 
-	private class ItemLoader {
+	private void invalidateCache() {
 
-		private final int offset;
-		private final int limit;
-
-		public ItemLoader(int offset, int limit) {
-
-			this.offset = offset;
-			this.limit = limit;
-		}
-
-		public List<AjaxAutoCompleteTestItem> load(Predicate<AjaxAutoCompleteTestItem> filterPredicate) {
-
-			return items//
-				.stream()
-				.filter(filterPredicate)
-				.skip(offset)
-				.limit(limit)
-				.collect(Collectors.toList());
-		}
+		CurrentDerivedObjectRegistry.getInstance().invalidateDerivedObjects(items);
 	}
 }
